[gd_scene load_steps=6 format=3 uid="uid://ci4d7j0imm4u"]

[ext_resource type="Texture2D" uid="uid://eij2hohstuhh" path="res://images/background.png" id="1_i7fht"]
[ext_resource type="Script" uid="uid://bnira8s8dt1r6" path="res://scenes/credits_menu/credits_menu.gd" id="1_ppef3"]
[ext_resource type="Texture2D" uid="uid://vafvwjai7e0i" path="res://images/icons/icon.svg" id="3_5ww45"]
[ext_resource type="Theme" uid="uid://drkpbmmwnukl" path="res://themes/train_one.tres" id="3_16lph"]

[sub_resource type="LabelSettings" id="LabelSettings_yhltf"]
font_size = 64

[node name="CreditsMenu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ppef3")

[node name="BackgroundSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_i7fht")
centered = false

[node name="Title" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Title"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme = ExtResource("3_16lph")
theme_override_font_sizes/font_size = 64
text = "Credits"
label_settings = SubResource("LabelSettings_yhltf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Title"]
layout_mode = 2

[node name="LogoSprite" type="Sprite2D" parent="Title/Control"]
position = Vector2(25, 10)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_5ww45")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="CloseButton" type="Button" parent="CenterContainer"]
layout_mode = 2
text = "BACK"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
current_tab = 0

[node name="CREDITS" type="ScrollContainer" parent="TabContainer"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
metadata/_tab_index = 0

[node name="CopyrightLabel" type="Label" parent="TabContainer/CREDITS"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(1024, 64)
layout_mode = 2
autowrap_mode = 3

[node name="THIRD_PARTY" type="ScrollContainer" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
metadata/_tab_index = 1

[node name="ThirdPartyLabel" type="Label" parent="TabContainer/THIRD_PARTY"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(1024, 64)
layout_mode = 2
autowrap_mode = 3

[node name="DISCLAIMER" type="ScrollContainer" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
metadata/_tab_index = 2

[node name="DisclaimerLabel" type="Label" parent="TabContainer/DISCLAIMER"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(1024, 64)
layout_mode = 2
autowrap_mode = 3

[node name="SUPPORT" type="ScrollContainer" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
metadata/_tab_index = 3

[node name="CoffeeLabel" type="RichTextLabel" parent="TabContainer/SUPPORT"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1024, 320)
layout_mode = 2
bbcode_enabled = true
text = "[url]https://buymeacoffee.com/jankoelzer[/url].
[center][img=200]res://publicity/buy-me-a-coffee-qr-code.png[/img][/center]"

[connection signal="pressed" from="CenterContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="meta_clicked" from="TabContainer/SUPPORT/CoffeeLabel" to="." method="_on_coffee_label_meta_clicked"]
